Images now overlap in the correct place

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 	color: #32c1cd;
 	text-align: center;
 }
-
+/* Headings  */
 h1 {
 	margin: 30px;
 	text-shadow: 5px 0 #232931;
@@ -21,12 +21,7 @@ h2 {
 	margin: 30px;
 	text-shadow: 5px 0 #232931;
 }
-.jar {
-	display: block;
-	width: 35%;
-	margin: auto;
-}
-
+/* Button */
 .btn {
 	margin: 30px;
 	background-color: #6166b3;
@@ -39,6 +34,31 @@ h2 {
 	height: 5rem;
 	box-shadow: 5px;
 }
+
+/* Body */
+.container-images {
+	position: relative;
+}
+
+.jar {
+	display: block;
+	width: 35%;
+	/* margin: auto; */
+	margin-left: 32%;
+	position: absolute;
+}
+
+.parchment {
+	position: absolute;
+	display: block;
+	/* display: none; */
+	width: 25%;
+	/* margin: auto; */
+	margin-left: 37%;
+	margin-top: 8%;
+}
+
+/* Footer */
 
 #footer {
 	color: bisque;
